--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,5 +1,7 @@
 alembic==1.7.1
+cffi==1.14.6
 click==8.0.1
+cryptography==3.4.8
 dominate==2.6.0
 Flask==2.0.1
 flask-blueprint==1.3.0
@@ -16,6 +18,7 @@ Mako==1.1.5
 MarkupSafe==2.0.1
 pathlib==1.0.1
 psycopg2-binary==2.9.1
+pycparser==2.20
 python-dotenv==0.18.0
 SQLAlchemy==1.4.20
 validate-email==1.3
